syntax = "proto3";
package address_grpc;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service AddressHandler {
  rpc GetByGuid (GuidRequest) returns (Address) {
    option (google.api.http) = {
      get: "/api/v1/address/{guid}"
    };
  };
  rpc GetAllCities (google.protobuf.Empty) returns (stream Address) {
    option (google.api.http) = {
      get: "/api/v1/cities"
    };
  }
  rpc GetCitiesByTerm (TermRequest) returns (stream Address) {
    option (google.api.http) = {
      get: "/api/v1/citybyterm/{term}"
    };
  }
}

message GuidRequest{
  string guid = 1;
}
message TermRequest{
  string term = 1;
  int64 count = 2;
}

message Address {
  int64 ID = 1;
  string Aoguid = 2;
  string Aolevel = 3 ;
  string Parentguid = 4;
  string Shortname = 5;
  string Formalname = 6;
  string Postalcode = 7;
}